# yizutt-agi-mvp

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crates/nexus-runtime/: Cargo.toml
crates/nexus-runtime/src/: main.rs  nexus.rs
crates/yizutt-launcher/: Cargo.toml
crates/yizutt-launcher/src/: main.rs
crates/yizutt-runtime/: Cargo.toml
crates/yizutt-runtime/src/: main.rs  yizutt.rs
examples/: echo_mcp_server.py  local_mock_model.py
examples/skills/echo-skill/: SKILL.md  skill.json
proto/: nexus.proto  yizutt.proto
python/nexus_agi/: __init__.py  client.py  demo.py  executor.py  memory.py  model_gateway.py  real_loop.py  skills.py
python/yizutt_agi/: __init__.py  capabilities.py  cli.py  client.py  demo.py  executor.py  i18n.py  mcp_client.py  memory.py  model_gateway.py  panel.py  real_loop.py  skill_composer.py  skill_market.py  skills.py  team_sync.py  training.py
scripts/: package_binary.sh  start_local_demo.sh
web/panel/: index.html
