[project]
name = "yizutt-agi"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
yizutt = "yizutt_agi.skill_market:main"
yizutt-panel = "yizutt_agi.panel:main"
yizutt-panel_cnzh = "yizutt_agi.panel:main"
yizutt-panel_twzh = "yizutt_agi.panel:main"
yizutt-panel_en = "yizutt_agi.panel:main"
yizutt-panel_ja = "yizutt_agi.panel:main"
yizutt-panel_ko = "yizutt_agi.panel:main"
yizutt-panel_ar = "yizutt_agi.panel:main"
yizutt-panel_ru = "yizutt_agi.panel:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
